# embedding-julia

./: CMakeLists.txt  FindJulia.cmake  README.md  embedding.c  embedding.cpp  process_cflags.jl  process_incdir.jl  process_libdir.jl
